--- a/html/type_energie.html
+++ b/html/type_energie.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>3D Flip Profile Card</title>
+    <title>Les différente type d'énergie renouvelable</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/type_energie_style.css">
 </head>
