--- a/html/accueil.html
+++ b/html/accueil.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vers un avenir renouvelable</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
   <header>
     <div class="header-container">
-    <img src="/img/Logo.png" alt="Logo site" class="logo" >
+    <img src="../img/Logo.png" alt="Logo site" class="logo" >
     <h1>Vers un Avenir Renouvelable</h1>
-    <img src="/img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
+    <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
   </div>
     <nav>
         <a href="accueil.html">Accueil</a>
