--- a/html/quiz.html
+++ b/html/quiz.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz - Énergies Renouvelables</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/styleQuiz.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/styleQuiz.css">
 </head>
 <body>
   <header>
     <div class="header-container">
-      <img src="/img/Logo.png" alt="Logo site" class="logo">
+      <img src="../img/Logo.png" alt="Logo site" class="logo">
       <h1>Quiz sur les Énergies Renouvelables</h1>
-      <img src="/img/ODD7.png" alt="Logo ODD 7" class="odd7">
+      <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7">
     </div>
     <nav>
       <a href="accueil.html">Accueil</a>
@@ -71,6 +71,6 @@
     </nav>
   </footer>
 
-  <script src="/javascript/script_quiz.js"></script>
+  <script src="../javascript/script_quiz.js"></script>
 </body>
 </html>
