de-uglyfied the website

--- a/html/accueil.html
+++ b/html/accueil.html
@@ -1,27 +1,107 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vers un avenir renouvelable</title>
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/accueil_style.css">
 </head>
+
 <body>
   <header>
     <div class="header-container">
-    <img src="../img/Logo.png" alt="Logo site" class="logo" >
-    <h1>Vers un Avenir Renouvelable</h1>
-    <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
-  </div>
+      <img src="../img/Logo.png" alt="Logo site" class="logo">
+      <h1>Vers un Avenir Renouvelable</h1>
+      <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
+    </div>
     <nav>
-        <a href="accueil.html">Accueil</a>
-        <a href="type_energie.html">Types D'énergie</a>
-        <a href="Quiz.html">Quiz</a>
+      <a href="accueil.html">Accueil</a>
+      <a href="type_energie.html">Types D'énergie</a>
+      <a href="Quiz.html">Quiz</a>
     </nav>
   </header>
 
   <main>
- 
+    <section class="hero">
+      <div class="hero-content">
+        <h2>Ensemble vers un futur énergétique durable</h2>
+        <p>Découvrez comment les énergies renouvelables transforment notre monde et contribuent à l'Objectif de
+          Développement Durable 7 : Énergie propre et d'un coût abordable.</p>
+        <a href="type_energie.html" class="cta-button">Explorer les énergies renouvelables</a>
+      </div>
+    </section>
+
+    <section class="stats-section">
+      <h2>Les chiffres clés</h2>
+      <div class="stats-container">
+        <div class="stat-card">
+          <h3>29%</h3>
+          <p>de l'électricité mondiale produite par des énergies renouvelables</p>
+        </div>
+        <div class="stat-card">
+          <h3>12 millions</h3>
+          <p>d'emplois dans le secteur des énergies renouvelables</p>
+        </div>
+        <div class="stat-card">
+          <h3>-85%</h3>
+          <p>baisse du coût des panneaux solaires depuis 2010</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="info-section">
+      <h2>Pourquoi les énergies renouvelables ?</h2>
+      <div class="info-container">
+        <div class="info-text">
+          <p>Les énergies renouvelables sont des sources d'énergie dont le renouvellement naturel est assez rapide pour
+            qu'elles puissent être considérées comme inépuisables à l'échelle du temps humain. Elles représentent une
+            alternative durable aux énergies fossiles qui sont limitées et polluantes.</p>
+          <p>Ces énergies propres sont essentielles pour lutter contre le changement climatique, améliorer la qualité de
+            l'air et garantir un accès universel à l'énergie.</p>
+        </div>
+        <div class="info-image">
+          <img src="../img/renewable-energy.png" alt="Sources d'énergies renouvelables">
+        </div>
+      </div>
+    </section>
+
+    <section class="energy-preview">
+      <h2>Les avantages des énergies renouvelables</h2>
+      <div class="energy-cards">
+        <div class="energy-card">
+          <img src="../img/environment.png" alt="Protection de l'environnement">
+          <h3>Pour l'environnement</h3>
+          <p>Réduction des émissions de gaz à effet de serre et diminution de la pollution atmosphérique.</p>
+          <a href="type_energie.html">Découvrir comment</a>
+        </div>
+        <div class="energy-card">
+          <img src="../img/economy.png" alt="Économie locale">
+          <h3>Pour l'économie</h3>
+          <p>Création d'emplois locaux et développement économique des territoires.</p>
+          <a href="type_energie.html">En savoir plus</a>
+        </div>
+        <div class="energy-card">
+          <img src="../img/independence.png" alt="Indépendance énergétique">
+          <h3>Pour l'indépendance</h3>
+          <p>Autonomie énergétique et réduction de la dépendance aux importations d'énergies fossiles.</p>
+          <a href="type_energie.html">Comprendre l'impact</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="action-section">
+      <h2>Participez à la transition énergétique</h2>
+      <div class="action-content">
+        <p>Chacun peut contribuer à l'adoption des énergies renouvelables. Informez-vous sur les options disponibles
+          dans votre région et découvrez comment vous pouvez faire la différence.</p>
+        <div class="action-buttons">
+          <a href="Quiz.html" class="button">Testez vos connaissances</a>
+          <a href="apropos.html" class="button">Notre mission</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -32,4 +112,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
