--- a/html/type_energie.html
+++ b/html/type_energie.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Les différente type d'énergie renouvelable</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/type_energie_style.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/type_energie_style.css">
 </head>
 
 <body>
     <header>
     <div class="header-container">
-    <img src="../img/Logo.png" alt="Logo site" class="logo" >
+    <img src="/img/Logo.png" alt="Logo site" class="logo" >
     <h1>Vers un Avenir Renouvelable</h1>
-    <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
+    <img src="/img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
   </div>
     <nav>
         <a href="accueil.html">Accueil</a>
@@ -25,49 +25,49 @@
     <div class="card-container">
         <div class="container">
             <div class="card">
-                <div class="front" style="background-image: url('../img/solar_background.png');">
+                <div class="front" style="background-image: url('/img/solar_background.png');">
                     <h2>Solaire</h2>
                 </div>
                 <div class="back">
-                    <p>This is an explanation</p>
-                    <button class="nav-btn">Contact Me</button>
-                </div>
+  <p>Découvrez comment l'énergie solaire transforme la lumière en électricité.</p>
+  <a href="solaire.html" class="nav-btn">Explorer</a>
+</div>
             </div>
         </div>
 
         <div class="container">
             <div class="card">
-                <div class="front"  style="background-image: url('../img/hydro_background.png');">
+                <div class="front"  style="background-image: url('/img/hydro_background.png');">
                     <h2>Hydrolique</h2>
                 </div>
                 <div class="back">
-                    <p>This is an explanation</p>
-                    <button class="nav-btn">Contact Me</button>
-                </div>
+  <p>Voyez comment la force de l'eau produit de l'électricité.</p>
+  <a href="hydraulique.html" class="nav-btn">Explorer</a>
+</div>
             </div>
         </div>
 
         <div class="container">
             <div class="card">
-                <div class="front" style="background-image: url('../img/air_background.png');">
+                <div class="front" style="background-image: url('/img/air_background.png');">
                     <h2>Éloienne</h2>
                 </div>
                 <div class="back">
-                    <p>This is an explanation</p>
-                    <button class="nav-btn">Contact Me</button>
-                </div>
+  <p>Comprenez le fonctionnement des éoliennes et leur efficacité.</p>
+  <a href="eolienne.html" class="nav-btn">Explorer</a>
+</div>
             </div>
         </div>
 
         <div class="container">
             <div class="card">
-                <div class="front" style="background-image: url('../img/biomasse_background.png');">
+                <div class="front" style="background-image: url('/img/biomasse_background.png');">
                     <h2>Biomasse</h2>
                 </div>
                 <div class="back">
-                    <p>This is an explanation</p>
-                    <button class="nav-btn">Contact Me</button>
-                </div>
+  <p>Apprenez comment les déchets organiques génèrent de l’énergie.</p>
+  <a href="biomasse.html" class="nav-btn">Explorer</a>
+</div>
             </div>
         </div>
     </div>
