updated navigation bar style and fixe paths

--- a/html/eolienne.html
+++ b/html/eolienne.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Énergie Éolienne</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/eolienne_style.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/eolienne_style.css">
 </head>
 <body>
 
@@ -27,8 +27,8 @@
 
     <div class="eolienne-zone">
   <div class="eolienne-container">
-    <img src="/img/eolienne_sans_palme.png" class="eolienne-base" alt="Éolienne fixe">
-    <img src="/img/pales_éolienne.png" id="palmes" class="palmes" alt="Pales éolienne">
+    <img src="../img/eolienne_sans_palme.png" class="eolienne-base" alt="Éolienne fixe">
+    <img src="../img/pales_éolienne.png" id="palmes" class="palmes" alt="Pales éolienne">
   </div>
 </div>
 
@@ -93,6 +93,6 @@
     <nav><a href="apropos.html">À propos</a></nav>
   </footer>
 
-  <script src="/javascript/eolienne.js"></script>
+  <script src="../javascript/eolienne.js"></script>
 </body>
 </html>
