--- a/html/hydraulique.html
+++ b/html/hydraulique.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Énergie Hydraulique</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/hydraulique_style.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/hydraulique_style.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
     <h2 style="text-align: center;">Clique sur la pompe pour remplir le barrage !</h2>
 
     <div class="barrage-container">
-  <img src="/img/barrage.png" class="barrage-img" alt="Barrage">
+  <img src="../img/barrage.png" class="barrage-img" alt="Barrage">
 
   <div class="mask">
     <div class="eau-colonne colonne1"></div>
@@ -35,7 +35,7 @@
   </div>
 
   <div class="pompe-zone">
-    <img src="/img/pompe.png" class="pompe" alt="Pompe" onclick="ajouterEau()">
+    <img src="../img/pompe.png" class="pompe" alt="Pompe" onclick="ajouterEau()">
     <p>Cliquez ici</p>
   </div>
 </div>
@@ -105,6 +105,6 @@
     </nav>
   </footer>
 
-  <script src="/javascript/hydraulique.js"></script>
+  <script src="../javascript/hydraulique.js"></script>
 </body>
 </html>
