--- a/html/solaire.html
+++ b/html/solaire.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Énergie Solaire</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/solaire_style.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/solaire_style.css">
 </head>
 <body>
 
@@ -26,12 +26,12 @@
     <h2 style="text-align: center;">Clique sur les nuages pour libérer le soleil !</h2>
 
     <div class="scene">
-      <img src="/img/solar_horizontal.png" alt="Soleil" class="sun">
-      <img src="/img/nuage.png" class="cloud" style="top: 10px; left: 30px;" onclick="removeCloud(this)">
-      <img src="/img/nuage.png" class="cloud" style="top: 40px; left: 60px;" onclick="removeCloud(this)">
-      <img src="/img/nuage.png" class="cloud" style="top: 20px; left: 100px;" onclick="removeCloud(this)">
-      <img src="/img/nuage.png" class="cloud" style="top: 70px; left: 40px;" onclick="removeCloud(this)">
-      <img src="/img/nuage.png" class="cloud" style="top: 30px; left: 150px;" onclick="removeCloud(this)">
+      <img src="../img/solar_horizontal.png" alt="Soleil" class="sun">
+      <img src="../img/nuage.png" class="cloud" style="top: 10px; left: 30px;" onclick="removeCloud(this)">
+      <img src="../img/nuage.png" class="cloud" style="top: 40px; left: 60px;" onclick="removeCloud(this)">
+      <img src="../img/nuage.png" class="cloud" style="top: 20px; left: 100px;" onclick="removeCloud(this)">
+      <img src="../img/nuage.png" class="cloud" style="top: 70px; left: 40px;" onclick="removeCloud(this)">
+      <img src="../img/nuage.png" class="cloud" style="top: 30px; left: 150px;" onclick="removeCloud(this)">
     </div>
 
     <div id="content">
@@ -104,6 +104,6 @@
   </footer>
 
  
-<script src="/javascript/solaire.js"></script>
+<script src="../javascript/solaire.js"></script>
 </body>
 </html>
