patch animation biomasse

--- a/html/biomasse.html
+++ b/html/biomasse.html
@@ -33,6 +33,6 @@
     <nav><a href="apropos.html">À propos</a></nav>
   </footer>
 
-  <script src="/javascript/biomasse.js"></script>
+  <script src="../javascript/biomasse.js"></script>
 </body>
 </html>
