--- a/html/biomasse.html
+++ b/html/biomasse.html
@@ -21,18 +21,79 @@
     </nav>
   </header>
   <main>
-    <h2>Clique sur la vache 🐄</h2>
+    <h2>Clique sur la vache</h2>
     <div id="scene">
       <img id="vache" src="../img/Vache.png" alt="Vache" />
       <img id="caca" src="../img/caca.png" alt="Caca" class="hidden" />
     </div>
-    <p id="secretMessage" class="hidden">🌿 Bien joué ! La biomasse transforme même le caca en énergie verte !</p>
+    
+
+    <div id="secretMessage" class="hidden">
+      
+      <section>
+        <h2>Qu'est-ce que la biomasse ?</h2>
+        <p>
+          La biomasse désigne l’ensemble des matières organiques d’origine végétale ou animale pouvant être transformées en énergie. 
+          Elle provient principalement des déchets agricoles, forestiers, ménagers ou encore de cultures dédiées à la production énergétique.
+        </p>
+      </section>
+
+      <section>
+        <h2>Comment la biomasse produit-elle de l’énergie ?</h2>
+        <ul>
+          <li><strong>Combustion :</strong> brûlage du bois ou des déchets pour produire chaleur et électricité.</li>
+          <li><strong>Méthanisation :</strong> transformation des matières organiques (ex : fumier) en biogaz par des bactéries.</li>
+          <li><strong>Gazéification :</strong> transformation thermique de la biomasse en gaz combustible.</li>
+          <li><strong>Fermentation alcoolique :</strong> production de bioéthanol à partir de cultures comme la betterave.</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Avantages de la biomasse</h2>
+        <ul>
+          <li>Ressource renouvelable et locale</li>
+          <li>Valorise les déchets organiques</li>
+          <li>Génère des emplois en zone rurale</li>
+          <li>Réduction des émissions de gaz à effet de serre</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Limites et précautions</h2>
+        <ul>
+          <li>Émissions de CO₂ si la combustion n'est pas maîtrisée</li>
+          <li>Concurrence avec les cultures alimentaires</li>
+          <li>Logistique importante pour la collecte et le traitement</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Exemple d'application</h2>
+        <p>
+          En France, des centrales biomasse brûlent des déchets de bois pour produire de l’électricité. 
+          Certaines fermes utilisent la méthanisation pour transformer le fumier de vaches en biogaz utilisé pour le chauffage ou les transports.
+        </p>
+      </section>
+
+      <section>
+        <h2>Le saviez-vous ?</h2>
+        <p>
+          Une seule vache peut produire jusqu’à 30 kg de fumier par jour, qui peut ensuite être transformé en énergie renouvelable.
+        </p>
+      </section>
+
+      <section>
+        <h2>Activité interactive</h2>
+        <p>
+          Tu peux maintenant tester tes connaissances en lançant le <a href="quiz.html">quiz sur la biomasse</a>.
+        </p>
+      </section>
+    </div>
   </main>
 
   <footer>
     <nav><a href="apropos.html">À propos</a></nav>
   </footer>
-
   <script src="../javascript/biomasse.js"></script>
 </body>
 </html>
