improved type_energies page

--- a/html/solaire.html
+++ b/html/solaire.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <title>Énergie Solaire</title>
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/solaire_style.css">
 </head>
+
 <body>
 
   <header>
@@ -35,65 +37,72 @@
     </div>
 
     <div id="content">
-  <h3>L’énergie solaire – Informations clés</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Aspect</th>
-        <th>Description</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Définition</td>
-        <td>L’énergie solaire est une source d’énergie renouvelable provenant du rayonnement du soleil. Elle peut être convertie en électricité ou en chaleur grâce à des technologies spécifiques telles que les panneaux photovoltaïques et les capteurs thermiques.</td>
-      </tr>
-      <tr>
-        <td>Types</td>
-        <td>
-          <strong>Solaire photovoltaïque</strong> : transforme directement la lumière du soleil en électricité à l’aide de cellules en silicium.<br>
-          <strong>Solaire thermique</strong> : capte la chaleur du soleil pour chauffer de l’eau ou des bâtiments.<br>
-          <strong>Solaire thermodynamique</strong> : concentre les rayons solaires pour produire de la vapeur et alimenter une turbine électrique.
-        </td>
-      </tr>
-      <tr>
-        <td>Avantages</td>
-        <td>
-          - Source d’énergie inépuisable à l’échelle humaine<br>
-          - Ne produit pas de pollution lors de son utilisation<br>
-          - Réduction des émissions de gaz à effet de serre<br>
-          - Faible coût de fonctionnement après installation<br>
-          - Installation possible sur les toits ou en zone rurale
-        </td>
-      </tr>
-      <tr>
-        <td>Inconvénients</td>
-        <td>
-          - Production intermittente (pas de soleil la nuit ou par temps couvert)<br>
-          - Rendement dépend de l’ensoleillement local<br>
-          - Nécessite des surfaces importantes pour les installations à grande échelle<br>
-          - Coût initial encore élevé, bien que de plus en plus abordable
-        </td>
-      </tr>
-      <tr>
-        <td>Utilisations</td>
-        <td>
-          - Production d’électricité pour les maisons et les entreprises<br>
-          - Chauffe-eau solaires<br>
-          - Agriculture (séchage de cultures, serres)<br>
-          - Éclairage public autonome<br>
-          - Systèmes de pompage d’eau en zones rurales isolées
-        </td>
-      </tr>
-      <tr>
-        <td>Impact environnemental</td>
-        <td>
-          L’énergie solaire a un impact environnemental très faible pendant son utilisation. La fabrication des panneaux peut générer des émissions et des déchets, mais ces effets sont compensés par les années de production d’énergie propre. De plus, les technologies évoluent vers plus de recyclabilité.
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+      <h3>L’énergie solaire – Informations clés</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Aspect</th>
+            <th>Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Définition</td>
+            <td>L’énergie solaire est une source d’énergie renouvelable provenant du rayonnement du soleil. Elle peut
+              être convertie en électricité ou en chaleur grâce à des technologies spécifiques telles que les panneaux
+              photovoltaïques et les capteurs thermiques.</td>
+          </tr>
+          <tr>
+            <td>Types</td>
+            <td>
+              <strong>Solaire photovoltaïque</strong> : transforme directement la lumière du soleil en électricité à
+              l’aide de cellules en silicium.<br>
+              <strong>Solaire thermique</strong> : capte la chaleur du soleil pour chauffer de l’eau ou des
+              bâtiments.<br>
+              <strong>Solaire thermodynamique</strong> : concentre les rayons solaires pour produire de la vapeur et
+              alimenter une turbine électrique.
+            </td>
+          </tr>
+          <tr>
+            <td>Avantages</td>
+            <td>
+              - Source d’énergie inépuisable à l’échelle humaine<br>
+              - Ne produit pas de pollution lors de son utilisation<br>
+              - Réduction des émissions de gaz à effet de serre<br>
+              - Faible coût de fonctionnement après installation<br>
+              - Installation possible sur les toits ou en zone rurale
+            </td>
+          </tr>
+          <tr>
+            <td>Inconvénients</td>
+            <td>
+              - Production intermittente (pas de soleil la nuit ou par temps couvert)<br>
+              - Rendement dépend de l’ensoleillement local<br>
+              - Nécessite des surfaces importantes pour les installations à grande échelle<br>
+              - Coût initial encore élevé, bien que de plus en plus abordable
+            </td>
+          </tr>
+          <tr>
+            <td>Utilisations</td>
+            <td>
+              - Production d’électricité pour les maisons et les entreprises<br>
+              - Chauffe-eau solaires<br>
+              - Agriculture (séchage de cultures, serres)<br>
+              - Éclairage public autonome<br>
+              - Systèmes de pompage d’eau en zones rurales isolées
+            </td>
+          </tr>
+          <tr>
+            <td>Impact environnemental</td>
+            <td>
+              L’énergie solaire a un impact environnemental très faible pendant son utilisation. La fabrication des
+              panneaux peut générer des émissions et des déchets, mais ces effets sont compensés par les années de
+              production d’énergie propre. De plus, les technologies évoluent vers plus de recyclabilité.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
   </main>
 
@@ -103,7 +112,8 @@
     </nav>
   </footer>
 
- 
-<script src="../javascript/solaire.js"></script>
+
+  <script src="../javascript/solaire.js"></script>
 </body>
+
 </html>
