--- a/html/type_energie.html
+++ b/html/type_energie.html
@@ -10,72 +10,120 @@
 
 <body>
     <header>
-    <div class="header-container">
-    <img src="../img/Logo.png" alt="Logo site" class="logo" >
-    <h1>Vers un Avenir Renouvelable</h1>
-    <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
-  </div>
-    <nav>
-        <a href="accueil.html">Accueil</a>
-        <a href="type_energie.html">Types D'énergie</a>
-        <a href="Quiz.html">Quiz</a>
-    </nav>
-  </header>
-    <h1 class="page-title">Les différente type d'énergie renouvelable</h1>
-    <div class="card-container">
-        <div class="container">
-            <div class="card">
-                <div class="front" style="background-image: url('../img/solar_background.png');">
-                    <h2>Solaire</h2>
-                </div>
-                <div class="back">
-  <p>Découvrez comment l'énergie solaire transforme la lumière en électricité.</p>
-  <a href="solaire.html" class="nav-btn">Explorer</a>
-</div>
-            </div>
+        <div class="header-container">
+            <img src="../img/Logo.png" alt="Logo site" class="logo">
+            <h1>Vers un Avenir Renouvelable</h1>
+            <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
         </div>
+        <nav>
+            <a href="accueil.html">Accueil</a>
+            <a href="type_energie.html">Types D'énergie</a>
+            <a href="Quiz.html">Quiz</a>
+        </nav>
+    </header>
+    <section class="card-section">
+        <h2>Découvrez les sources d'énergie renouvelable</h2>
+        <p class="section-description">Survolez les cartes pour en savoir plus et cliquez pour explorer chaque type
+            d'énergie en détail</p>
 
-        <div class="container">
-            <div class="card">
-                <div class="front"  style="background-image: url('../img/hydro_background.png');">
-                    <h2>Hydrolique</h2>
+        <div class="card-container">
+            <div class="container">
+                <div class="card">
+                    <div class="front" style="background-image: url('../img/solar_background.png');">
+                        <h2>Solaire</h2>
+                    </div>
+                    <div class="back">
+                        <p>Découvrez comment l'énergie solaire transforme la lumière en électricité grâce aux panneaux
+                            photovoltaïques et aux centrales solaires thermodynamiques.</p>
+                        <a href="solaire.html" class="nav-btn">Explorer</a>
+                    </div>
                 </div>
-                <div class="back">
-  <p>Voyez comment la force de l'eau produit de l'électricité.</p>
-  <a href="hydraulique.html" class="nav-btn">Explorer</a>
-</div>
             </div>
-        </div>
+            <div class="container">
+                <div class="card">
+                    <div class="front" style="background-image: url('../img/hydro_background.png');">
+                        <h2>Hydraulique</h2>
+                    </div>
+                    <div class="back">
+                        <p>Voyez comment la force de l'eau produit de l'électricité grâce aux barrages, à l'énergie
+                            marémotrice et aux courants marins.</p>
+                        <a href="hydraulique.html" class="nav-btn">Explorer</a>
+                    </div>
+                </div>
+            </div>
 
-        <div class="container">
-            <div class="card">
-                <div class="front" style="background-image: url('../img/air_background.png');">
-                    <h2>Éloienne</h2>
+            <div class="container">
+                <div class="card">
+                    <div class="front" style="background-image: url('../img/air_background.png');">
+                        <h2>Éolienne</h2>
+                    </div>
+                    <div class="back">
+                        <p>Comprenez le fonctionnement des éoliennes terrestres et offshore et leur rôle crucial dans la
+                            transition énergétique mondiale.</p>
+                        <a href="eolienne.html" class="nav-btn">Explorer</a>
+                    </div>
                 </div>
-                <div class="back">
-  <p>Comprenez le fonctionnement des éoliennes et leur efficacité.</p>
-  <a href="eolienne.html" class="nav-btn">Explorer</a>
-</div>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <div class="front" style="background-image: url('../img/biomasse_background.png');">
+                        <h2>Biomasse</h2>
+                    </div>
+                    <div class="back">
+                        <p>Apprenez comment les déchets organiques, le bois et les cultures énergétiques sont
+                            transformés en chaleur, électricité et biocarburants.</p>
+                        <a href="biomasse.html" class="nav-btn">Explorer</a>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div class="container">
-            <div class="card">
-                <div class="front" style="background-image: url('../img/biomasse_background.png');">
-                    <h2>Biomasse</h2>
-                </div>
-                <div class="back">
-  <p>Apprenez comment les déchets organiques génèrent de l’énergie.</p>
-  <a href="biomasse.html" class="nav-btn">Explorer</a>
-</div>
-            </div>
+    </section>
+    <section class="comparison-section">
+        <h2>Comparaison des énergies renouvelables</h2>
+        <div class="table-container">
+            <table class="comparison-table">
+                <thead>
+                    <tr>
+                        <th>Type d'énergie</th>
+                        <th>Avantages</th>
+                        <th>Défis</th>
+                        <th>Potentiel</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Solaire</td>
+                        <td>Abondant, silencieux, modulable</td>
+                        <td>Intermittence, stockage</td>
+                        <td>Très élevé</td>
+                    </tr>
+                    <tr>
+                        <td>Éolienne</td>
+                        <td>Mature, coût compétitif</td>
+                        <td>Dépendance au vent, impact visuel</td>
+                        <td>Élevé</td>
+                    </tr>
+                    <tr>
+                        <td>Hydraulique</td>
+                        <td>Stable, stockable, longue durée de vie</td>
+                        <td>Impact environnemental, sites limités</td>
+                        <td>Modéré</td>
+                    </tr>
+                    <tr>
+                        <td>Biomasse</td>
+                        <td>Stockable, valorisation des déchets</td>
+                        <td>Émissions de CO₂, compétition avec l'alimentation</td>
+                        <td>Modéré</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </div>
+    </section>
     <footer>
-    <nav>
-      <a href="apropos.html">À propos</a>
-    </nav>
-  </footer>
+        <nav>
+            <a href="apropos.html">À propos</a>
+        </nav>
+    </footer>
 </body>
 
 </html>
