correction fautes d'orthographes

--- a/html/accueil.html
+++ b/html/accueil.html
@@ -18,7 +18,7 @@
     </div>
     <nav>
       <a href="accueil.html">Accueil</a>
-      <a href="type_energie.html">Types D'énergie</a>
+      <a href="type_energie.html">Types d'énergies</a>
       <a href="Quiz.html">Quiz</a>
     </nav>
   </header>
