--- a/html/apropos.html
+++ b/html/apropos.html
@@ -16,7 +16,7 @@
     </div>
     <nav>
       <a href="accueil.html">Accueil</a>
-      <a href="type_energie.html">Types D'énergie</a>
+      <a href="type_energie.html">Types d'énergies</a>
       <a href="Quiz.html">Quiz</a>
     </nav>
   </header>
@@ -66,7 +66,7 @@
         
         <div class="info-card">
           <h3>Notre approche</h3>
-          <p>Nous avons choisi une approche pédagogique et interactive, permettant aux visiteurs d'explorer différentes sources d'énergie renouvelable et de tester leurs connaissances grâce à un quiz interactif.</p>
+          <p>Nous avons choisi une approche pédagogique et interactive, permettant aux visiteurs d'explorer différentes sources d'énergies renouvelables et de tester leurs connaissances grâce à un quiz interactif.</p>
         </div>
         
         <div class="info-card">
