--- a/html/hydraulique.html
+++ b/html/hydraulique.html
@@ -17,13 +17,13 @@
     </div>
     <nav>
       <a href="accueil.html">Accueil</a>
-      <a href="type_energie.html">Types D'énergie</a>
+      <a href="type_energie.html">Types d'énergies</a>
       <a href="quiz.html">Quiz</a>
     </nav>
   </header>
 
   <main>
-    <h2 style="text-align: center;">Clique sur la pompe pour remplir le barrage !</h2>
+    <h2 style="text-align: center;">Cliquez sur la pompe pour remplir le barrage !</h2>
 
     <div class="barrage-container">
   <img src="../img/barrage.png" class="barrage-img" alt="Barrage">
