--- a/html/quiz.html
+++ b/html/quiz.html
@@ -16,7 +16,7 @@
     </div>
     <nav>
       <a href="accueil.html">Accueil</a>
-      <a href="type_energie.html">Types D'énergie</a>
+      <a href="type_energie.html">Types d'énergies</a>
       <a href="Quiz.html">Quiz</a>
     </nav>
   </header>
@@ -55,7 +55,7 @@
       </section><br>
 
       <section>
-        <p><strong>5. Donnez un exemple d'avantage des énergies renouvelables :</strong></p>
+        <p><strong>5. Quels sont les avantages des énergies renouvellables ? Donnez des exemples :</strong></p>
         <input type="text" name="q5" placeholder="Votre réponse..." style="width:100%; padding:8px;">
       </section><br>
 
