--- a/html/solaire.html
+++ b/html/solaire.html
@@ -19,13 +19,13 @@
     </div>
     <nav>
       <a href="accueil.html">Accueil</a>
-      <a href="type_energie.html">Types D'énergie</a>
+      <a href="type_energie.html">Types d'énergies</a>
       <a href="Quiz.html">Quiz</a>
     </nav>
   </header>
 
   <main>
-    <h2 style="text-align: center;">Clique sur les nuages pour libérer le soleil !</h2>
+    <h2 style="text-align: center;">Cliquez sur les nuages pour libérer le soleil !</h2>
 
     <div class="scene">
       <img src="../img/solar_horizontal.png" alt="Soleil" class="sun">
