--- a/html/type_energie.html
+++ b/html/type_energie.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Les différente type d'énergie renouvelable</title>
+    <title>Les différente type d'énergies renouvelables</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/type_energie_style.css">
 </head>
@@ -17,12 +17,12 @@
         </div>
         <nav>
             <a href="accueil.html">Accueil</a>
-            <a href="type_energie.html">Types D'énergie</a>
+            <a href="type_energie.html">Types d'énergies</a>
             <a href="Quiz.html">Quiz</a>
         </nav>
     </header>
     <section class="card-section">
-        <h2>Découvrez les sources d'énergie renouvelable</h2>
+        <h2>Découvrez les sources d'énergies renouvelable</h2>
         <p class="section-description">Survolez les cartes pour en savoir plus et cliquez pour explorer chaque type
             d'énergie en détail</p>
 
