--- a/html/biomasse.html
+++ b/html/biomasse.html
@@ -16,12 +16,12 @@
     </div>
     <nav>
       <a href="accueil.html">Accueil</a>
-      <a href="type_energie.html">Types D'énergie</a>
+      <a href="type_energie.html">Types d'énergies</a>
       <a href="quiz.html">Quiz</a>
     </nav>
   </header>
   <main>
-    <h2>Clique sur la vache</h2>
+    <h2>Cliquez sur la vache</h2>
     <div id="scene">
       <img id="vache" src="../img/Vache.png" alt="Vache" />
       <img id="caca" src="../img/caca.png" alt="Caca" class="hidden" />
