--- a/html/eolienne.html
+++ b/html/eolienne.html
@@ -17,13 +17,13 @@
     </div>
     <nav>
       <a href="accueil.html">Accueil</a>
-      <a href="type_energie.html">Types D'énergie</a>
+      <a href="type_energie.html">Types d'énergies</a>
       <a href="quiz.html">Quiz</a>
     </nav>
   </header>
 
   <main>
-    <h2 style="text-align: center;">Clique sur le bouton pour faire tourner l'éolienne !</h2>
+    <h2 style="text-align: center;">Cliquez sur le bouton pour faire tourner l'éolienne !</h2>
 
     <div class="eolienne-zone">
   <div class="eolienne-container">
