--- a/html/type_energie.html
+++ b/html/type_energie.html
@@ -13,7 +13,7 @@
         <div class="header-container">
             <img src="../img/Logo.png" alt="Logo site" class="logo">
             <h1>Vers un Avenir Renouvelable</h1>
-            <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300px">
+            <img src="../img/ODD7.png" alt="Logo ODD 7" class="odd7" height="300">
         </div>
         <nav>
             <a href="accueil.html">Accueil</a>
