modif lien github

--- a/html/apropos.html
+++ b/html/apropos.html
@@ -79,22 +79,24 @@
           <h3>Technologies utilisées</h3>
           <p>Ce site a été développé en utilisant HTML5, CSS3 et JavaScript, en suivant les principes de responsive
             design pour une expérience utilisateur optimale sur tous les appareils.
-            Github :
-            <a href="https://github.com/Wooshayl/Projet_Web_EnrgRenouvelable" target="_blank">
-              https://github.com/Wooshayl/Projet_Web
-              _EnrgRenouvelable
-            </a>
           </p>
         </div>
       </div>
     </section>
 
     <section class="contact-section">
-      <h2>Nous contacter</h2>
-      <p>Pour toute question ou suggestion concernant ce projet, n'hésitez pas à nous contacter à l'adresse suivante :
-      </p>
-      <a href="mailto:contact@energiesrenouvelables.edu" class="contact-button">contact@energiesrenouvelables.edu</a>
-    </section>
+  <h2>Nous contacter</h2>
+  <p>Pour toute question ou suggestion concernant ce projet, n'hésitez pas à nous contacter à l'adresse suivante :</p>
+  <a href="mailto:contact@energiesrenouvelables.edu" class="contact-button">contact@energiesrenouvelables.edu</a>
+
+  <div class="github-link">
+    <h2>Le projet est aussi disponible sur GitHub :</h2>
+    <a href="https://github.com/Wooshayl/Projet_Web_EnrgRenouvelable" target="_blank" rel="noopener noreferrer" class="contact-button">
+      Voir le dépôt GitHub
+    </a>
+  </div>
+</section>
+
   </main>
 
   <footer>
